Fix alignment of home welcome message

--- a/client/styles/styles.styl
+++ b/client/styles/styles.styl
@@ -200,7 +200,7 @@ body
       font-weight: 300;
       text-transform: uppercase;
       letter-spacing: 10px;
-      margin 40px 20px 15px
+      margin 60px 20px 15px
     p.lead
       font-size: 12px;
       font-weight: 400;
